# block-aligner

./: .gitignore  Cargo.toml  README.md  accuracy_avx2.sh  accuracy_wasm.sh  bench_avx2.sh  bench_wasm.sh  build.rs  build_ir_asm.sh  build_wat.sh  cbindgen.toml  compare.sh  debug_avx2.sh  doc_avx2.sh  doc_wasm.sh  ideas.md  nanopore_accuracy_avx2.sh  nanopore_bench_avx2.sh  test_avx2.sh  test_wasm.sh  uc_accuracy_avx2.sh  uc_bench_avx2.sh  x_drop_accuracy_avx2.sh
.github/workflows/: ci.yaml
benches/: prefix_scan.rs  rand_scan.rs  rand_scan_avx2.rs
c/: Cargo.toml  Makefile  README.md  align_local.c  align_prefix.c  block_aligner.h  example.c
data/: README.md
examples/: accuracy.rs  block_img.rs  compare.rs  debug.rs  nanopore_accuracy.rs  nanopore_bench.rs  nanopore_bench_global.rs  profile.rs  pssm_accuracy.rs  pssm_bench.rs  uc_accuracy.rs  uc_bench.rs  verify_trace.rs  x_drop_accuracy.rs
matrices/: BLOSUM62
scripts/: create_matrix.py  create_matrix_aa.py  scop_seq_profile_pairs.py
src/: avx2.rs  cigar.rs  ffi.rs  lib.rs  matrix.rs  neon.rs  scan.rs  scan_I_adapt.rs  scan_avx2.rs  scan_band.rs  scan_block.rs  scan_delta.rs  scan_delta_avx2.rs  scan_minecraft.rs  scores.rs  simd128.rs  simulate.rs
src/ffi/: mod.rs
vis/: block_aligner_accuracy_vis.ipynb  block_aligner_bench_vis.ipynb  block_aligner_vis.ipynb  run_vis.sh
