[package]
name = "better-alignment"
version = "0.1.0"
authors = ["c0deb0t <daniel.liu02@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug = []

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
panic = "abort"

[profile.bench]
codegen-units = 1
debug-assertions = false
lto = "thin"

[dependencies]
wee_alloc = "^0.4"
rand = { version = "^0.8", default-features = false, features = ["std_rng", "alloc"] }

[dev-dependencies]
bio = "^0.33"
parasailors = "^0.3.1"
