[package]
name = "block-aligner"
version = "0.1.0"
authors = ["c0deb0t <daniel.liu02@gmail.com>"]
edition = "2018"

[features]
debug = ["debug_size"]
debug_size = []
mca = []

[profile.release]
debug-assertions = false
lto = "thin"
panic = "abort"

[profile.bench]
debug-assertions = false
lto = "thin"

[dependencies]
#wee_alloc = "^0.4"
rand = { version = "^0.8", default-features = false, features = ["std_rng", "alloc"] }

[dev-dependencies]
bio = "^0.33"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
parasailors = "^0.3.1"
